updated links to schedule and workshops updated sponsors

--- a/index.html
+++ b/index.html
@@ -4264,11 +4264,7 @@
         <div class="collapse navbar-collapse" id="main-nav">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="talks.html">Talks</a>
-
-                </li>
-                <li>
-                    <a href="schedule.html">Schedule</a>
+                    <a href="https://confengine.com/appium-conf-2019/schedule/rich">Schedule</a>
 
                 </li>
                 <li>
@@ -4280,7 +4276,7 @@
 
                 </li>
                 <li>
-                    <a href="workshops.html">Workshops</a>
+                    <a href="workshops.html">Pre-Conf Workshops</a>
 
                 </li>
                 <li>
@@ -4857,7 +4853,7 @@
         </div>
 
         <div class="row row--flex row--flex--center">
-            <h4 class="section__heading">Title Sponsor</h4>
+            <h4 class="section__heading">Title &amp; Reception Sponsor</h4>
         </div>
         <div class="row row--flex row--flex--center">
             <div class="col-md-3 col-sm-6">
@@ -4870,83 +4866,24 @@
                     <img src="perch/resources/saucelabs-6-w600@2x.png" alt="Sauce Labs">
                 </a>
             </div>
-
         </div>
 
-
         <div class="row row--flex row--flex--center">
-
+            <h4 class="section__heading">Gold Sponsor</h4>
+        </div>
+        <div class="row row--flex row--flex--center">
             <div class="col-md-3 col-sm-6">
-                <a rel="nofollow" href="https://www.perfectomobile.com/">
-                    <img src="perch/resources/perfectomobile-1-w400@2x.png" alt="Perfecto">
+                <a rel="nofollow" href="https://cloudgrey.io">
+                    <img src="perch/resources/cloud-grey-1-w400@2x.png" alt="Cloud Grey">
                 </a>
-
-                <p class="text-center small">
-
-
-                    Silver Sponsor
-
-                </p>
             </div>
-
 
             <div class="col-md-3 col-sm-6">
                 <a rel="nofollow" href="https://headspin.io">
-                    <img src="perch/resources/headspin-1-w400@2x.png" alt="HeadSpin">
+                    <img src="perch/resources/headspin-2-w400@2x.png" alt="HeadSpin">
                 </a>
-
-                <p class="text-center small">
-
-
-                    Silver Sponsor
-
-                </p>
             </div>
-
-
-            <div class="col-md-3 col-sm-6">
-                <a rel="nofollow" href="https://www.coderus.com/">
-                    <img src="perch/resources/coderus-w400@2x.png" alt="Coderus">
-                </a>
-
-                <p class="text-center small">
-
-
-                    Silver Sponsor
-
-                </p>
-            </div>
-
-
-            <div class="col-md-3 col-sm-6">
-                <a rel="nofollow" href="https://www.stickermule.com/uk">
-                    <img src="perch/resources/stickermule-1-w400@2x.png" alt="Sticker Mule">
-                </a>
-
-                <p class="text-center small">
-
-
-                    Bronze sponsor
-
-                </p>
-            </div>
-
-
-            <div class="col-md-3 col-sm-6">
-                <a rel="nofollow" href="https://goo.gl/vW4XMy">
-                    <img src="perch/resources/mot-1-w400@2x.png" alt="Ministry of Testing">
-                </a>
-
-                <p class="text-center small">
-
-
-                    Bronze sponsor
-
-                </p>
-            </div>
-
         </div>
-
     </div>
 </section>
 
