--- a/sponsors.html
+++ b/sponsors.html
@@ -132,11 +132,7 @@
         <div class="collapse navbar-collapse" id="main-nav">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="talks.html">Talks</a>
-
-                </li>
-                <li>
-                    <a href="schedule.html">Schedule</a>
+                    <a href="https://confengine.com/appium-conf-2019/schedule/rich">Schedule</a>
 
                 </li>
                 <li class="selected">
@@ -148,7 +144,7 @@
 
                 </li>
                 <li>
-                    <a href="workshops.html">Workshops</a>
+                    <a href="workshops.html">Pre-Conf Workshops</a>
 
                 </li>
                 <li>
@@ -216,6 +212,29 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
 
+                <div class="row">
+                    <div class="col-sm-4">
+                        <a rel="nofollow" href="https://applitools.com/?utm_term=&utm_source=trade-show&utm_medium=&utm_content=field-event&utm_campaign=190613-AppiumConf-India">
+                            <img src="perch/resources/applitools-1.png" alt="Applitools">
+                        </a>
+                    </div>
+                    <div class="col-sm-8">
+                        <header class="section__header section__header--horizontal">
+                            <h2 class="section__heading">
+                                Applitools
+                            </h2>
+                            <p class="section__subheading">Title &amp; Reception Sponsor</p>
+                        </header>
+                        <p>Applitools Eyes is the leading cloud-based Automated Visual Testing solution for web, mobile and desktop apps, helping companies verify that GUI & functionality are properly displayed to the end user, across all devices and browsers.</p>
+                        <a href="https://applitools.com/?utm_term=&utm_source=trade-show&utm_medium=&utm_content=field-event&utm_campaign=190613-AppiumConf-India">Visit Sponsor Site</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <hr class="divider">
+                    </div>
+                </div>
+
 
                 <div class="row">
                     <div class="col-sm-4">
@@ -228,12 +247,7 @@
                             <h2 class="section__heading">
                                 Sauce Labs
                             </h2>
-                            <p class="section__subheading">
-
-
-                                Premier Sponsor
-
-                            </p>
+                            <p class="section__subheading">Title &amp; Reception Sponsor</p>
                         </header>
                         <p>Sauce Labs provides the world’s largest cloud-based platform for the automated testing of web and mobile applications. Sauce Labs helps companies accelerate software development cycles, improve application quality, and deploy with confidence across hundreds of browser / OS
                             platforms, including Windows, Linux, iOS, Android & Mac OS X. Optimized for Continuous integration (CI), Continuous delivery (CD), and DevOps, the Sauce Labs platform is built to handle the most secure data from its customers, who range from Fortune 500 companies to small
@@ -251,53 +265,19 @@
 
                 <div class="row">
                     <div class="col-sm-4">
-                        <a rel="nofollow" href="https://applitools.com/?utm_term=&utm_source=trade-show&utm_medium=&utm_content=field-event&utm_campaign=190613-AppiumConf-India">
-                            <img src="perch/resources/applitools-1.png" alt="Applitools">
+                        <a rel="nofollow" href="https://cloudgrey.io/">
+                            <img src="perch/resources/cloud-grey-1.png" alt="Cloud Grey">
                         </a>
                     </div>
                     <div class="col-sm-8">
                         <header class="section__header section__header--horizontal">
                             <h2 class="section__heading">
-                                Applitools
+                                Cloud Grey
                             </h2>
-                            <p class="section__subheading">
-
-
-                                Platinum Sponsor
-
-                            </p>
-                        </header>
-                        <p>Applitools Eyes is the leading cloud-based Automated Visual Testing solution for web, mobile and desktop apps, helping companies verify that GUI & functionality are properly displayed to the end user, across all devices and browsers.</p>
-                        <a href="https://applitools.com/?utm_term=&utm_source=trade-show&utm_medium=&utm_content=field-event&utm_campaign=190613-AppiumConf-India">Visit Sponsor Site</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <hr class="divider">
-                    </div>
-                </div>
-
-
-                <div class="row">
-                    <div class="col-sm-4">
-                        <a rel="nofollow" href="https://www.perfectomobile.com/">
-                            <img src="perch/resources/perfectomobile-1.png" alt="Perfecto">
-                        </a>
-                    </div>
-                    <div class="col-sm-8">
-                        <header class="section__header section__header--horizontal">
-                            <h2 class="section__heading">
-                                Perfecto
-                            </h2>
-                            <p class="section__subheading">
-
-
-                                Silver Sponsor
-
-                            </p>
+                            <p class="section__subheading">Gold Sponsor</p>
                         </header>
                         <p></p>
-                        <a href="https://www.perfectomobile.com/">Visit Sponsor Site</a>
+                        <a href="https://cloudgrey.io/">Visit Sponsor Site</a>
                     </div>
                 </div>
                 <div class="row">
@@ -318,12 +298,7 @@
                             <h2 class="section__heading">
                                 HeadSpin
                             </h2>
-                            <p class="section__subheading">
-
-
-                                Silver Sponsor
-
-                            </p>
+                            <p class="section__subheading">Gold Sponsor</p>
                         </header>
                         <p></p>
                         <a href="https://headspin.io">Visit Sponsor Site</a>
@@ -334,101 +309,6 @@
                         <hr class="divider">
                     </div>
                 </div>
-
-
-                <div class="row">
-                    <div class="col-sm-4">
-                        <a rel="nofollow" href="https://www.coderus.com/">
-                            <img src="perch/resources/coderus.png" alt="Coderus">
-                        </a>
-                    </div>
-                    <div class="col-sm-8">
-                        <header class="section__header section__header--horizontal">
-                            <h2 class="section__heading">
-                                Coderus
-                            </h2>
-                            <p class="section__subheading">
-
-
-                                Silver Sponsor
-
-                            </p>
-                        </header>
-                        <p>Coderus is an international certified software development company, delivering outstanding mobile apps and embedded solutions together with first-class service.</p>
-
-                        <p>Technology is only as good as the experience it offers to its users. At Coderus, whether we’re developing mobile apps, embedded software or something a little different, we take your objectives and work with them to put the user first.</p>
-
-                        <p>Our agile approach is supported by state-of-the-art interface design and high-performing coding, as well as world-class planning tools that ensure timely and cost-effective, highly secure project delivery. </p>
-
-                        <p>Move confidently into the future with Coderus. Find out more at <a href="https://www.coderus.com">www.coderus.com</a>.</p>
-                        <a href="https://www.coderus.com/">Visit Sponsor Site</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <hr class="divider">
-                    </div>
-                </div>
-
-
-                <div class="row">
-                    <div class="col-sm-4">
-                        <a rel="nofollow" href="https://www.stickermule.com/uk">
-                            <img src="perch/resources/stickermule-1.png" alt="Sticker Mule">
-                        </a>
-                    </div>
-                    <div class="col-sm-8">
-                        <header class="section__header section__header--horizontal">
-                            <h2 class="section__heading">
-                                Sticker Mule
-                            </h2>
-                            <p class="section__subheading">
-
-
-                                Bronze sponsor
-
-                            </p>
-                        </header>
-                        <p></p>
-                        <a href="https://www.stickermule.com/uk">Visit Sponsor Site</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <hr class="divider">
-                    </div>
-                </div>
-
-
-                <div class="row">
-                    <div class="col-sm-4">
-                        <a rel="nofollow" href="https://goo.gl/vW4XMy">
-                            <img src="perch/resources/mot-1.png" alt="Ministry of Testing">
-                        </a>
-                    </div>
-                    <div class="col-sm-8">
-                        <header class="section__header section__header--horizontal">
-                            <h2 class="section__heading">
-                                Ministry of Testing
-                            </h2>
-                            <p class="section__subheading">
-
-
-                                Bronze sponsor
-
-                            </p>
-                        </header>
-                        <p></p>
-                        <a href="https://goo.gl/vW4XMy">Visit Sponsor Site</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <hr class="divider">
-                    </div>
-                </div>
-
-
             </div>
         </div>
     </div>
