--- a/workshops.html
+++ b/workshops.html
@@ -132,11 +132,7 @@
         <div class="collapse navbar-collapse" id="main-nav">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="talks.html">Talks</a>
-
-                </li>
-                <li>
-                    <a href="schedule.html">Schedule</a>
+                    <a href="https://confengine.com/appium-conf-2019/schedule/rich">Schedule</a>
 
                 </li>
                 <li>
@@ -148,7 +144,7 @@
 
                 </li>
                 <li class="selected">
-                    <a href="workshops.html">Workshops</a>
+                    <a href="workshops.html">Pre-Conf Workshops</a>
 
                 </li>
                 <li>
@@ -184,7 +180,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-                <h1 class="page__heading">Workshops</h1>
+                <h1 class="page__heading">Pre-Conference Workshops</h1>
                 <ul class="list list--header text-center">
                     <li class="list__item">13 June 2019</li>
                 </ul>
@@ -192,7 +188,7 @@
                 <div class="page__intro">
                     <p>For even more in-depth learning at AppiumConf, register for a full-day workshop the day before the conference.</p>
 
-                    <p>Workshops will run from 9:30–17:30 on Thursday 13 June 2019. Tickets are sold separately from the conference.</p>
+                    <p>Workshops will run from 9:30–18:00 on Thursday 13 June 2019. Tickets are sold separately from the conference.</p>
 
                 </div>
 
@@ -209,26 +205,40 @@
                 </div>
             </div>
             <div class="row row--flex row--flex--center">
-                <h3 class="section__heading">2018 Workshop</h3>
+                <h3 class="section__heading">Workshop</h3>
             </div>
             <div class="row">
                 <div class="col-sm-8 col-md-7 col-md-offset-1">
                     <h2 class="workshop__title">Advanced Appium</h2>
-                    <div class="workshop__description"><p>Dive into advanced Appium concepts in this workshop for power users. We'll cover multi-platform single script tests, framework design and reporting, automating mobile gestures and lots more.</p></div>
+                    <div class="workshop__description">
+                        <p>Appium is an open-source tool for automating native, mobile web, and hybrid applications on iOS mobile, Android mobile, and Windows desktop platforms. It is "cross-platform" and allows you to write tests against multiple platforms (iOS, Android, Windows), using the same API. This enables code reuse between iOS, Android, and Windows test suites.</p>
+                            <p>This workshop will help you get started with Appium by covering key concepts like:</p>
+                            <ul>
+                                <li>Client/Server Architecture</li>
+                                <li>Session</li>
+                                <li>Desired Capabilities</li>
+                                <li>Appium Server</li>
+                                <li>Appium Clients</li>
+                                <li>Appium Desktop</li>
+                            </ul>
+                            <p>Think of this as a one-day crash course in Appium.</p>
+                    </div>
                     <div class="workshop__link">
-                        <a class="btn btn-primary btn--cta" href="workshops/advanced-appium.html">Read more</a>
+                        <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/proposal/9487/getting-started-with-appium">Read more</a>
                     </div>
                 </div>
                 <div class="col-sm-4 col-md-3">
-
                     <figure class="avatar">
-                        <img class="avatar__image" src="perch/resources/srinivasan-sekar.jpg" alt="Srinivasan Sekar">
+                        <img class="avatar__image" src="https://res.cloudinary.com/dnnqsdghx/image/upload/w_201,h_201,f_auto,q_auto:best,c_thumb,g_face,z_0.8/v1530451338/ProfilePics/xhizslpehqqsocaratdj.jpg" alt="Anand Bagmar">
                     </figure>
 
                     <figure class="avatar">
-                        <img class="avatar__image" src="perch/resources/sai-krishna.jpg" alt="Sai Krishna">
+                        <img class="avatar__image" src="https://res.cloudinary.com/dnnqsdghx/image/upload/w_201,h_201,f_auto,q_auto:best,c_thumb,g_face,z_0.8/v1518181675/ProfilePics/tepnpiddlsi3nfwaq44v.jpg" alt="Pooja Shah">
                     </figure>
 
+                    <figure class="avatar">
+                        <img class="avatar__image" src="https://www.gravatar.com/avatar/9a0b0a35b95dbaae11596f5868515ffa?s=201&r=pg&d=mm" alt="Bruno Alassia">
+                    </figure>
                 </div>
             </div>
             <div class="row">
@@ -238,20 +248,22 @@
             </div>
             <div class="row">
                 <div class="col-sm-8 col-md-7 col-md-offset-1">
-                    <h2 class="workshop__title">Appium with Real Devices</h2>
-                    <div class="workshop__description"><p>The constant increase in mobile device usage pushes many organizations to take a closer look at mobile testing, especially testing on real mobile devices. At this workshop, you'll learn the basics to jumpstart your career in mobile test
-                        automation.
-                    </p></div>
+                    <h2 class="workshop__title">Advanced Appium</h2>
+                    <div class="workshop__description">
+                        <p>At this workshop, you'll learn about advanced concepts in Appium. We will learn how to write a single script for Android, iOS and mobile web apps. Once our tests are established, we will work on framework design and report. We will also have a detailed look at how can we automate various mobile gestures using TouchActions and mobile endpoints in Appium.</p>
+                    </div>
                     <div class="workshop__link">
-                        <a class="btn btn-primary btn--cta" href="workshops/appium-with-real-devices.html">Read more</a>
+                        <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/proposal/9304/advanced-appium">Read more</a>
                     </div>
                 </div>
                 <div class="col-sm-4 col-md-3">
-
                     <figure class="avatar">
-                        <img class="avatar__image" src="perch/resources/umut-uzgur-1.jpg" alt="Umut Uzgur">
+                        <img class="avatar__image" src="https://res.cloudinary.com/dnnqsdghx/image/upload/w_201,h_201,f_auto,q_auto:best,c_thumb,g_face,z_0.8/v1520956827/ProfilePics/kqrbrueolyjirqvislx3.jpg" alt="Srinivasan Sekar">
                     </figure>
 
+                    <figure class="avatar">
+                        <img class="avatar__image" src="https://res.cloudinary.com/dnnqsdghx/image/upload/w_201,h_201,f_auto,q_auto:best,c_thumb,g_face,z_0.8/v1523184139/ProfilePics/y3b3utkgbjgzigvnreub.jpg" alt="Sai Krishna">
+                    </figure>
                 </div>
             </div>
             <div class="row">
@@ -261,19 +273,45 @@
             </div>
             <div class="row">
                 <div class="col-sm-8 col-md-7 col-md-offset-1">
-                    <h2 class="workshop__title">Continuous Testing for Mobile Applications</h2>
-                    <div class="workshop__description"><p>Building on a basic understanding of how to create Appium test scripts, this course introduces the use of testing frameworks, with the example of TestNG for Java, to improve the efficiency of test/build process through parallel testing, and
-                        to provide advanced testing techniques and features such as assertions and test reporting.</p></div>
+                    <h2 class="workshop__title">Appium at Scale - Mobile Grid workshop</h2>
+                    <div class="workshop__description">
+                        <p>Selenium Grid can be a bit daunting to get up and running. Starting it is quite easy, but using it effectively can require pulling in third-party tools. In this workshop we’ll cover how to run your grid effectively, using best practices culled from several large grid installations with a hybrid setup for both Selenium and Appium tests.</p>
+                    </div>
                     <div class="workshop__link">
-                        <a class="btn btn-primary btn--cta" href="workshops/continuous-testing.html">Read more</a>
+                        <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/proposal/9301/appium-at-scale-mobile-grid-workshop">Read more</a>
                     </div>
                 </div>
                 <div class="col-sm-4 col-md-3">
-
                     <figure class="avatar">
-                        <img class="avatar__image" src="perch/resources/titus-fortner.jpg" alt="Titus Fortner">
+                        <img class="avatar__image" src="https://res.cloudinary.com/dnnqsdghx/image/upload/w_201,h_201,f_auto,q_auto:best,c_thumb,g_face,z_0.8/v1518518621/ProfilePics/ow9ytomhj7qsshdl9b8r.jpg" alt="ManojKumar">
                     </figure>
-
+                    <figure class="avatar">
+                        <img class="avatar__image" src="https://res.cloudinary.com/dnnqsdghx/image/upload/w_201,h_201,f_auto,q_auto:best,c_thumb,g_face,z_0.8/v1520703835/ProfilePics/mlpd5awwwk5abx9nq5ir.jpg" alt="Diego Molina">
+                    </figure>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-10 col-md-offset-1">
+                    <hr class="divider">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-8 col-md-7 col-md-offset-1">
+                    <h2 class="workshop__title">Fix a bug become a committer</h2>
+                    <div class="workshop__description">
+                        <p>Have you ever wondered how Appium works under the covers? Do you get frustrated with locators not locating, app screens not loading, or test behaving inconsistently from one run to the next? Appium is an attempt to unify thousands of disparate elements across a wide spectrum of challenges into a single, common interface that works seamlessly across all the major mobile and desktop OSs - and yet only a handful of volunteers work to maintain this gigantic effort. If you would like to enhance your own Appium experience while contributing back to the software that has defined so many of our careers, come to this workshop. We'll dissect the different elements of Appium, dive into its internals, learn how it was built and how to make changes to it, and even write a unit test you can contribute on the same day!</p>
+                    </div>
+                    <div class="workshop__link">
+                        <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/proposal/9467/fix-a-bug-become-a-committer">Read more</a>
+                    </div>
+                </div>
+                <div class="col-sm-4 col-md-3">
+                    <figure class="avatar">
+                        <img class="avatar__image" src="https://www.gravatar.com/avatar/174ae1c2a863b7daf240a86da84671bd?s=201&r=pg&d=mm" alt="Jonathan Lipps">
+                    </figure>
+                    <figure class="avatar">
+                        <img class="avatar__image" src="https://res.cloudinary.com/dnnqsdghx/image/upload/w_201,h_201,f_auto,q_auto:best,c_thumb,g_face,z_0.8/v1544171077/ProfilePics/tzcazegrlnwsv3cfmvkr.png" alt="Kazuaki Matsuo">
+                    </figure>
                 </div>
             </div>
         </div>
@@ -300,7 +338,7 @@
         </div>
 
         <div class="row row--flex row--flex--center">
-            <h4 class="section__heading">Title Sponsor</h4>
+            <h4 class="section__heading">Title &amp; Reception Sponsor</h4>
         </div>
         <div class="row row--flex row--flex--center">
             <div class="col-md-3 col-sm-6">
@@ -313,83 +351,24 @@
                     <img src="perch/resources/saucelabs-6-w600@2x.png" alt="Sauce Labs">
                 </a>
             </div>
-
         </div>
 
-
         <div class="row row--flex row--flex--center">
-
+            <h4 class="section__heading">Gold Sponsor</h4>
+        </div>
+        <div class="row row--flex row--flex--center">
             <div class="col-md-3 col-sm-6">
-                <a rel="nofollow" href="https://www.perfectomobile.com/">
-                    <img src="perch/resources/perfectomobile-1-w400@2x.png" alt="Perfecto">
+                <a rel="nofollow" href="https://cloudgrey.io">
+                    <img src="perch/resources/cloud-grey-1-w400@2x.png" alt="Cloud Grey">
                 </a>
-
-                <p class="text-center small">
-
-
-                    Silver Sponsor
-
-                </p>
             </div>
-
 
             <div class="col-md-3 col-sm-6">
                 <a rel="nofollow" href="https://headspin.io">
-                    <img src="perch/resources/headspin-1-w400@2x.png" alt="HeadSpin">
+                    <img src="perch/resources/headspin-2-w400@2x.png" alt="HeadSpin">
                 </a>
-
-                <p class="text-center small">
-
-
-                    Silver Sponsor
-
-                </p>
             </div>
-
-
-            <div class="col-md-3 col-sm-6">
-                <a rel="nofollow" href="https://www.coderus.com/">
-                    <img src="perch/resources/coderus-w400@2x.png" alt="Coderus">
-                </a>
-
-                <p class="text-center small">
-
-
-                    Silver Sponsor
-
-                </p>
-            </div>
-
-
-            <div class="col-md-3 col-sm-6">
-                <a rel="nofollow" href="https://www.stickermule.com/uk">
-                    <img src="perch/resources/stickermule-1-w400@2x.png" alt="Sticker Mule">
-                </a>
-
-                <p class="text-center small">
-
-
-                    Bronze sponsor
-
-                </p>
-            </div>
-
-
-            <div class="col-md-3 col-sm-6">
-                <a rel="nofollow" href="https://goo.gl/vW4XMy">
-                    <img src="perch/resources/mot-1-w400@2x.png" alt="Ministry of Testing">
-                </a>
-
-                <p class="text-center small">
-
-
-                    Bronze sponsor
-
-                </p>
-            </div>
-
         </div>
-
     </div>
 </section>
 
