updated links to schedule and workshops updated sponsors

--- a/index.html
+++ b/index.html
@@ -4320,12 +4320,7 @@
                 <div class="col-md-4 col-md-offset-1 u-text--to-end col--flex--bottom">
                     <h3>Bengaluru, India</h3>
                     <h3 style="margin-top:0">June 13-15 2019</h3>
-
-                    <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/register/selection">
-                        Buy Tickets
-                    </a>
-
-
+                    <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/register/selection">Register</a>
                 </div>
             </div>
         </div>
@@ -4341,20 +4336,11 @@
                 </h2>
 
                 <div class="section__content">
-                    <p><strong>Join us for three-full days packed with inspiring and practical talks featuring the Appium team and the world's top mobile testing and automation experts.</strong></p>
-                    <p>Gain valuable insight for your own automation strategy, make connections with other Appium users from around the globe and learn from Appium specialists on a variety of topics, including:</p>
-
-                    <ul>
-                        <li>Utilising Application Backdoors for Testing via Appium</li>
-                        <li>Appium for Unity games and apps</li>
-                        <li>Layout (GUI) Automation Testing</li>
-                        <li>P2P Communication Testing</li>
-                        <li>Interacting with native components in real devices</li>
-                        <li>... and more!</li>
-                    </ul>
+                    <h4>Join us for three-full days packed with inspiring and practical talks featuring the Appium team and the world's top mobile testing and automation experts.</h4>
+                    <h4>Gain valuable insight for your own automation strategy, make connections with other Appium users from around the globe and learn from Appium specialists on a variety of topics.</h4>
                 </div>
 
-                <div class="text-center">
+                <div class="text-center" style="margin-top: 40px">
                     <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/schedule/rich" style="color: #505f68">
                         Checkout the Schedule
                     </a>
