added a link to proposals

--- a/index.html
+++ b/index.html
@@ -4777,7 +4777,12 @@
                     </a>
                 </figure>
             </div>
-            <div class="clearfix"></div>
+
+            <div class="col-sm-12 text-center" style="margin-top: 40px">
+                <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/proposals" style="color: #505f68">
+                    Checkout their Session Details
+                </a>
+            </div>
         </div>
     </div>
 </section>
