added Daniel Graham to fix bug workshop

--- a/workshops.html
+++ b/workshops.html
@@ -310,6 +310,9 @@
                         <img class="avatar__image" src="https://www.gravatar.com/avatar/174ae1c2a863b7daf240a86da84671bd?s=201&r=pg&d=mm" alt="Jonathan Lipps">
                     </figure>
                     <figure class="avatar">
+                        <img class="avatar__image" src="https://res.cloudinary.com/dnnqsdghx/image/upload/w_201,h_201,f_auto,q_auto:best,c_thumb,g_face,z_0.8/v1547843876/ProfilePics/jhbkvwz98dhrf36fknft.jpg" alt="Daniel Graham">
+                    </figure>
+                    <figure class="avatar">
                         <img class="avatar__image" src="https://res.cloudinary.com/dnnqsdghx/image/upload/w_201,h_201,f_auto,q_auto:best,c_thumb,g_face,z_0.8/v1544171077/ProfilePics/tzcazegrlnwsv3cfmvkr.png" alt="Kazuaki Matsuo">
                     </figure>
                 </div>
