fixed workshop name

--- a/workshops.html
+++ b/workshops.html
@@ -209,7 +209,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-8 col-md-7 col-md-offset-1">
-                    <h2 class="workshop__title">Advanced Appium</h2>
+                    <h2 class="workshop__title">Getting Started with Appium</h2>
                     <div class="workshop__description">
                         <p>Appium is an open-source tool for automating native, mobile web, and hybrid applications on iOS mobile, Android mobile, and Windows desktop platforms. It is "cross-platform" and allows you to write tests against multiple platforms (iOS, Android, Windows), using the same API. This enables code reuse between iOS, Android, and Windows test suites.</p>
                             <p>This workshop will help you get started with Appium by covering key concepts like:</p>
